# scms

./: .gitignore  pyproject.toml
src/education/: example.env  tailwind.config.js
src/education/app/: forms.py  urls.py  views.py
src/education/app/static/app/css/: style.css
src/education/app/static/app/js/: file_input.js  layout.js  reload.js  theme.js
src/education/app/templates/app/: base.html  constance.html  layout.html
src/education/authentication/: admin.py  forms.py  models.py  storages_backends.py  urls.py  views.py
src/education/authentication/migrations/: 0001_initial.py  0002_remove_euser_full_name_remove_euser_user_type.py  0003_alter_euser_user_image.py  0004_euser_middle_name_euser_mobile_number_and_more.py  0005_alter_euser_mobile_number.py  0006_alter_euser_first_name_alter_euser_middle_name.py  0007_alter_euser_user_image.py
src/education/authentication/templates/authentication/: base.html  forgot.html  logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  profile.html  profile_edit.html
src/education/education/: settings.py  urls.py
